Bug 737014 - Plaintext signatures are not received properly due to lack of BR nodes. r=bienvenu.